[metadata]
name = EMD-signal
version = attr: PyEMD.__version__
author = Dawid Laszuk
author_email = pyemd@dawid.lasz.uk
description = Implementation of the Empirical Mode Decomposition (EMD) and its variations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/laszukdawid/PyEMD
license = Apache-2.0
keywords = signal decomposition data analysis
classifiers = 
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
install_requires =
    numpy >= 1.12
    scipy >= 0.19
    pathos >= 0.2.1
python_requires = >=3.6, <4
test_suite = PyEMD.tests

[options.extras_require]
doc =
    sphinx
    sphinx_rtd_theme
    numpydoc
dev =
    pycodestyle
    black
    isort
test =
    pytest
    codecov


[pycodestyle]
max-line-length = 120
ignore = E203,W503,W605
